--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Medieval Hangman</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
+    <script src="./assets/javascript/game.js"></script>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="javascript" href="./assets/javascript/game.js">
   </head>
   <body>
     <div class="container">
@@ -13,38 +14,37 @@
       <div class="row">
         <div class="col-md-12">
           <div class="jumbotron">
-            <h1 class="display-3">Hello, world!</h1>
-            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-            <hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-              <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>
+            <h1 class="display-3">Greetings Mortal!</h1>
+            <p class="lead">Thee has been charged with a HOLY QUEST to solve the puzzle dubbed "Hangith thee Man". Enter the correct-ith letters to continue to thy HOLY VICTORY!</p>
+            <p>Press any key to continue-ith.</p>
           </div>
         </div>
       </div> <!-- Close jumbotron row -->
 <!-- Card row -->
       <div class="row">
-        <div class="card-deck">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <div class="col-md-12">
+          <div class="card-deck">
+  <!-- Card for the puzzle to be solved -->
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Ye Olde Current Puzzle-ith</h4>
+                <p id="currentDisplay" class="card-text"></p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  <!-- Card for the wrong guesses -->
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Ye Olde False-ith Answers</h4>
+                <p id="wrongAnswers" class="card-text"></p>
+              </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  <!-- Card for the player's stats -->
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Holy Record</h4>
+                <p id="playerWins" class="card-text"></p>
+                <p id="playerLoss" class="card-text"></p>
+              </div>
             </div>
           </div>
         </div>
