Added css and dictionary

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="jumbotron">
             <h1 class="display-3">Greetings Mortal!</h1>
             <p class="lead">Thee has been charged with a HOLY QUEST to solve the puzzle dubbed "Hangith thee Man". Enter the correct-ith letters to continue to thy HOLY VICTORY!</p>
-            <p>Press any key to continue-ith.</p>
+            <p>Press SPACE BAR to continue-ith.</p>
           </div>
         </div>
       </div> <!-- Close jumbotron row -->
