--- a/index.html
+++ b/index.html
@@ -14,39 +14,41 @@
       <div class="row">
         <div class="col-md-12">
           <div class="jumbotron">
+            <img id="img" src="./assets/images/holy_grail_god.jpg" alt="GOD in all his forms">
+            <div id="player" class="card-deck">
+    <!-- Card for the puzzle to be solved -->
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Ye Olde Current Puzzle-ith</h4>
+                  <p id="currentDisplay" class="card-text"></p>
+                </div>
+              </div>
+    <!-- Card for the wrong guesses -->
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Ye Olde False-ith Answers</h4>
+                  <p id="wrongAnswers" class="card-text"></p>
+                </div>
+              </div>
+    <!-- Card for the player's stats -->
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Holy Record</h4>
+                  <p id="playerWins" class="card-text"></p>
+                  <p id="playerLoss" class="card-text"></p>
+                </div>
+              </div>
+            </div>
             <h1 class="display-3">Greetings Mortal!</h1>
-            <p class="lead">Thee has been charged with a HOLY QUEST to solve the puzzle dubbed "Hangith thee Man". Enter the correct-ith letters to continue to thy HOLY VICTORY!</p>
-            <p>Press SPACE BAR to continue-ith.</p>
+            <p class="lead">Thou hath been charged with a HOLY QUEST to solve the puzzle dubbed "Hangith thee Man". Enter the correct-ith letters to continue to thy HOLY VICTORY!</p>
+            <p>Press ENTER to continue-ith.</p>
           </div>
         </div>
       </div> <!-- Close jumbotron row -->
 <!-- Card row -->
       <div class="row">
         <div class="col-md-12">
-          <div class="card-deck">
-  <!-- Card for the puzzle to be solved -->
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">Ye Olde Current Puzzle-ith</h4>
-                <p id="currentDisplay" class="card-text"></p>
-              </div>
-            </div>
-  <!-- Card for the wrong guesses -->
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">Ye Olde False-ith Answers</h4>
-                <p id="wrongAnswers" class="card-text"></p>
-              </div>
-            </div>
-  <!-- Card for the player's stats -->
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">Holy Record</h4>
-                <p id="playerWins" class="card-text"></p>
-                <p id="playerLoss" class="card-text"></p>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div> <!-- Close card row -->
     </div>
