Added some win/lose cards that don't work

--- a/index.html
+++ b/index.html
@@ -39,18 +39,26 @@
                 </div>
               </div>
             </div>
+            <div id="winCard" class="card win-lose">
+              <img class="card-img-top" src="https://media.giphy.com/media/HfJdu4HABDU3e/giphy.gif" alt="A brave but foolish king and his not-horse">
+              <div class="card-body">
+                <p class="card-text">You've beaten the witch!</p>
+                <button id="goAwayWin" type="button" class="btn btn-secondary btn-lg btn-block">T'was a great day for Britan!</button>
+              </div>
+            </div>
+            <div id="loseCard" class="card win-lose">
+              <img class="card-img-top" src="https://media.tenor.com/images/4363d69b038739354017f4be6e090f26/tenor.gif" alt="A mocking Frenchman">
+              <div class="card-body">
+                <p class="card-text">You've been turned into a newt!</p>
+                <button id="goAwayLose" type="button" class="btn btn-secondary btn-lg btn-block">I got better...</button>
+              </div>
+            </div>
             <h1 class="display-3">Greetings Mortal!</h1>
             <p class="lead">Thou hath been charged with a HOLY QUEST to solve the puzzle dubbed "Hangith thee Man". Enter the correct-ith letters to continue to thy HOLY VICTORY!</p>
             <p>Press ENTER to continue-ith.</p>
           </div>
         </div>
       </div> <!-- Close jumbotron row -->
-<!-- Card row -->
-      <div class="row">
-        <div class="col-md-12">
-
-        </div>
-      </div> <!-- Close card row -->
     </div>
   </body>
 </html>
