It finally works

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
               <img class="card-img-top" src="https://media.giphy.com/media/HfJdu4HABDU3e/giphy.gif" alt="A brave but foolish king and his not-horse">
               <div class="card-body">
                 <p class="card-text">You've beaten the witch!</p>
-                <button id="goAwayWin" type="button" class="btn btn-secondary btn-lg btn-block">T'was a great day for Britan!</button>
+                <button id="goAwayWin" type="button" class="btn btn-lg btn-block" onclick="goAway('winCard')">A great day for Britan!</button>
               </div>
             </div>
             <div id="loseCard" class="card win-lose">
               <img class="card-img-top" src="https://media.tenor.com/images/4363d69b038739354017f4be6e090f26/tenor.gif" alt="A mocking Frenchman">
               <div class="card-body">
                 <p class="card-text">You've been turned into a newt!</p>
-                <button id="goAwayLose" type="button" class="btn btn-secondary btn-lg btn-block">I got better...</button>
+                <button id="goAwayLose" type="button" class="btn btn-lg btn-block" onclick="goAway('loseCard')">I got better...</button>
               </div>
             </div>
             <h1 class="display-3">Greetings Mortal!</h1>
